Name:                webapp
Version:             0.0.1
Synopsis:            Haskell web scaffolding using Scotty, WAI, and Warp
Homepage:            https://github.com/fhsjaagshs/webapp
Bug-reports:         https://github.com/fhsjaagshs/webapp/issues
License:             MIT
License-file:        LICENSE
Author:              Nathaniel Symer <nate@symer.io>
Maintainer:          Nathaniel Symer <nate@symer.io>
Copyright:           (c) 2015 Nathaniel Symer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:         See README.md

Extra-source-files:
    README.md
    changelog.md

Library
  Exposed-modules:   Web.App
                     Web.App.Assets
                     Web.App.Cookie
                     Web.App.Daemon
                     Web.App.FileCache
                     Web.App.HTTP
                     Web.App.IO
                     Web.App.Monad
  other-modules:     Web.App.Gzip
                     Web.App.Privileges
  default-language:  Haskell2010
  build-depends:     base,
                     mtl,
                     stm,
                     transformers,
                     scotty,
                     wai,
                     wai-extra,
                     warp,
                     warp-tls,
                     http-types,
                     bytestring,
                     data-default,
                     time,
                     unordered-containers,
                     attoparsec,
                     unix,
                     fsnotify,
                     filepath,
                     hashtables,
                     base16-bytestring,
                     blaze-builder,
                     zlib,
                     cryptohash,
                     text,
                     hjsmin,
                     css-text,
                     mime-types,
                     filepath,
                     directory
                       
  GHC-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/fhsjaagshs/webapp.git