Name:                webapp
Version:             0.2.0
Synopsis:            Haskell web app framework based on WAI & Warp
Homepage:            https://github.com/fhsjaagshs/webapp
Bug-reports:         https://github.com/fhsjaagshs/webapp/issues
License:             MIT
License-file:        LICENSE
Author:              Nathaniel Symer <nate@symer.io>
Maintainer:          Nathaniel Symer <nate@symer.io>
Copyright:           (c) 2015 Nathaniel Symer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:         See README.md

Extra-source-files:
    README.md
    CHANGELOG.md

Library
  build-tools:       hsc2hs, happy >= 1.19, alex >= 3.1.4
  ghc-options:       -Wall
  Exposed-modules:   Web.App
                     Web.App.Cookie
                     Web.App.HTTP
                     Web.App.State
                     Web.App.Monad
                     Web.App.Monad.WebAppT
                     Web.App.Monad.RouteT
                     Web.App.Middleware
                     Web.App.Middleware.Gzip
                     Web.App.Middleware.ForceSSL
                     Web.App.Internal.TerminalSize
                     Web.App.RouteMatching
  other-modules:     Web.App.Internal.IO
                     Web.App.Internal.Daemon
                     Web.App.Internal.Privileges
  default-language:  Haskell2010
  build-depends:     base >= 4.8.0.0 && <= 4.8.1.0,
                     mtl,
                     stm,
                     transformers,
                     wai,
                     wai-extra,
                     warp,
                     warp-tls,
                     network,
                     streaming-commons,
                     regex-compat,
                     http-types,
                     bytestring,
                     data-default,
                     time,
                     unordered-containers,
                     attoparsec,
                     unix,
                     fsnotify,
                     filepath,
                     hashtables,
                     base16-bytestring,
                     blaze-builder,
                     zlib,
                     cryptohash,
                     text,
                     hjsmin,
                     css-text,
                     mime-types,
                     filepath,
                     directory,
                     optparse-applicative

source-repository head
  type:     git
  location: git://github.com/fhsjaagshs/webapp.git